examples/test/testpolicy14628.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14628
  namespace: namespace148
spec:
  podSelector:
    matchLabels:
      key28: value23
      key23: value41
      key14: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value25
          key3: value44
          key9: value23
      podSelector:
        matchLabels:
          key27: value36
